applications/webapp/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: herginniewebapp-deployment
  labels:
    app: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: herginniewebapp
        image: leo310/herginniewebsite
        ports:
        - containerPort: 3000
