applications/webapp/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
    - protocol: TCP
      port: 3001
      targetPort: 3001
