applications/webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    # kubernetes.io/tls-acme: "true"
    # cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: kong
spec:
  tls:
  - secretName: webapp-tls-secret
    hosts:
    - webapp.herginnies.world
  rules:
  - host: webapp.herginnies.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 3000
